# proledata

./: README.md  hugo.toml  hugo.yaml  pyproject.toml
.github/workflows/: hugo.yaml
app/: definitions.py  health.py  timeline.py
content/: _index.md
content/docs/: _index.md
docs/: _config.yml
resources/: events.json
static/: capital_overaccumulation.md  war_economy.md
